welcome.lessons.welcome.methods.slug.SlugSnail.scala.code
def hunt(c:Color) {
  while(!estSurBiscuit()){
      if(!estFaceMur()){
        if(isFacingTrail(c) == true){
          avance()
          baisseBrosse()
          leveBrosse()
        }
        else(gauche())
      }
      else(gauche())
    }
  prendBiscuit()
}
def isFacingTrail(x:Color):Boolean = {
  if(!estFaceMur()){
    var couleurCase: Boolean = false
    avance()
    if(getCouleurSol()==x){
      couleurCase = true
    }
    recule()
    return(couleurCase)
  }
  else(return(couleurCase))
}